--- a/_portfolio/Extracurricular.html
+++ b/_portfolio/Extracurricular.html
@@ -1,7 +1,13 @@
 ---
 title: "Extracurricular"
-excerpt: "Short description of portfolio item number 3 <br/><img src='/images/500x300.png'>"
+excerpt: "Short description of Extracurricular <br/><img src='/images/paintingprocreate.jpg'>"
 collection: portfolio
 ---
 
-This is another item in your portfolio. It can have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML.
+## Subheading 1
+
+This is some content under the first subheading.
+
+## Subheading 2
+
+This is some content under the second subheading.
