--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='xizhu/images/ICTsig.png'>"
+excerpt: "Short description of portfolio item number 2 <br/><img src='/xizhu/images/ICTsig.png'>"
 collection: portfolio
 ---
 
