--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,5 +1,5 @@
 ---
-title: "Portfolio item number 2"
+title: "Digitalization and Impact of ICT"
 excerpt: "Short description of portfolio item number 2 <br/><img src='/xizhu/images/ICTsig.png'>"
 collection: portfolio
 ---
