--- a/_portfolio/portfolio-item-3.html
+++ b/_portfolio/portfolio-item-3.html
@@ -1,7 +1,11 @@
 ---
-title: "Portfolio item number 3"
-excerpt: "Short description of portfolio item number 3 <br/><img src='/images/500x300.png'>"
+title: "Digitization of Everyday Life"
+excerpt: "How change happens? Social Interaction and Grassroot Governance"
 collection: portfolio
 ---
 
-This is another item in your portfolio. It can have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML.
+This series of studies shows my initial concern.
+
+## 
+
+
